--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -80,7 +80,7 @@
 
 
 
- <div class="slider-container w-100 top-0 m-0 p-0">
+ <div class="slider-container">
   <div id="slider">
     <img src="image/bg.jpg" alt="Image 1" />
     <img src="image/bg1.jpeg" alt="Image 2" />
@@ -116,7 +116,7 @@
 {# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> #}
 	{% endblock %}
 
-</header>
+
 
 
 
