--- a/templates/menu/categorie.html.twig
+++ b/templates/menu/categorie.html.twig
@@ -271,7 +271,7 @@ position: absolute;
 {# <section class="js-horizontal-collapse horizontal-collapse " data-item-min-width="120" data-item-max-width="125">
 
   <ul class="horizontal-collapse__inner"> #}
-
+<main class="main-content">	
   <div class="container-fluid ">
          
           <div class="row">
@@ -294,7 +294,7 @@ position: absolute;
     </div>
      
 
-        
+    </main>    
         {# <li class="js-horizontal-collapse-item horizontal-collapse__item horizontal-collapse__item--{{ loop.index0 }}" tabindex="0" role="button">
           <div class="js-horizontal-collapse-item-inner horizontal-collapse__item-inner">
             <div class="horizontal-collapse__inactive-content">
