--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Register !{% endblock %}
 
 {% block body %}
+<main class='main-content'>
     <section class="container">
         <div class="row">
             <div class="col">
@@ -34,7 +35,7 @@
             </div>
         </div>
     </section>
-
+</main>
 {% endblock %}
 
 {# {% block body %}
